@startuml command_problem
title Polecenie - problem: ściśle powiązań bez wzorca

skinparam monochrome true
skinparam dpi 150
skinparam classAttributeIconSize 0

class Button {
    + onClick()
}

class Light {
    + TurnOn()
    + TurnOff()
}

class Fan {
    + Start()
    + Stop()
}

class GarageDoor {
    + Open()
    + Close()
}

Button --> Light : bezpośrednia zależność
Button --> Fan : bezpośrednia zależność
Button --> GarageDoor : bezpośrednia zależność

note bottom of Button
  Przycisk musi znac WSZYSTKICH odbiornikow.
  Dodanie nowego odbiornika = zmiana Button.
  Naruszenie OCP i SRP!
end note

@enduml
